recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.error
DragonCurve1:7: error: ';' expected but ')' found.
		val v = (y + y2 - x2 + x) / 2.)
                                              ^